fix: x overflow

--- a/src/app.css
+++ b/src/app.css
@@ -8,3 +8,16 @@
 
 @import "../static/themes/lucid.css";
 @import "../static/themes/coolwind.css";
+
+/* Global overflow prevention */
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
+#svelte {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
